Fix zoomed startup on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,6 @@ body {
   margin: 0;
   background-color: #CCCCCC;
   overflow: hidden;
-  display: flex;
   width: 512px;
 }
 
